--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <li>Docker</li>
         <li>Ansible</li>
         <li>Integração Contínua</li>
+        <li>NodeJS</li>
     </ul>
 </body>
 </html>
