--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <ul>
-        <li>Vagrant</li>
-        <li>Docker</li>
-        <li>Ansible</li>
-        <li>Integração Contínua</li>
-        <li>NodeJS + Angular</li>
+        <li>Vagrant: Gerenciando máquinas virtuais</li>
+        <li>Docker: Criando containers sem dor de cabeça</li>
+        <li>Ansible: Sua infraestrutura como código</li>
+        <li>Integração Contínua: Mais qualidade e menos risco no desenvolvimento</li>
+        <li>Node.js Parte 1: Inovando com JavaScript no backend</li>
     </ul>
 </body>
 </html>
